--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -40,3 +40,15 @@ calico_resource_yaml: 'https://docs.projectcalico.org/{{ calico_version }}/getti
 helm_name: helm
 helm_mirror: https://kubernetes-helm.storage.googleapis.com
 tiller_url: https://github.com/rimusz/helm-tiller
+
+# development environment 
+pycharm_version: 'community-2018.3.3'
+PYTHON_VERSION: '3.7.3'
+TANGO_VERSION: '9.3.3'
+LIBZEROMQ_VERSION: '4.3.2'
+CPPZEROMQ_VERSION: '4.4.1'
+OMNIORB_VERSION: '4.2.3'
+docker_compose_version: '1.23.2'
+#vscode version 1.30
+start_mysql_server: 'no'
+install_mysql: 'no'
