--- a/roles/skampi/tasks/main.yml
+++ b/roles/skampi/tasks/main.yml
@@ -1,3 +1,7 @@
+- name: set fact
+  set_fact:
+    "localuser": "{{ lookup('env','USER') }}"
+
 - name: Install make
   apt:
     name:
@@ -21,25 +25,15 @@
     update: yes
     ssh_opts: "-o StrictHostKeyChecking=no"
 
-- name: Linting the chart
-  import_role:
-    name: helm-lint
-    tasks_from: one_chart
-  when: helm_lint is defined and helm_lint == "yes"
-  vars:
-    directory: /usr/src/skampi/chart
-
 - name: Change file ownership, group and permissions
   file:
     path: /usr/src/skampi
-    owner: '{{ ansible_user }}'
-    group: '{{ ansible_user }}'
+    owner: '{{ localuser }}'
+    group: '{{ localuser }}'
 
 - name: Start the integrated system
-  become_user: "{{ ansible_user }}"
+  become_user: "{{ localuser }}"
   shell: |
     cd /usr/src/skampi
-    kubectl apply -f resources/traefik-minikube.yaml
     make deploy_all KUBE_NAMESPACE=integration 
     kubectl get all,pv,pvc,ingress -n integration
-  when: start_integrated_system == 'yes'
