--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -57,7 +57,7 @@ docker_compose_version: '1.23.2'
 start_mysql_server: 'no'
 install_mysql: 'no'
 
-cluster-name: 'mycluster'
-ips: '0.0.0.0 0.0.0.0 0.0.0.0'
+cluster_name: 'mycluster'
+ips: '192.168.93.13 192.168.93.30'
 k8s_version: 'v1.16.3'
 kube_spray_version: 'v2.12.0'
