--- a/roles/k8s/tasks/cluster.yml
+++ b/roles/k8s/tasks/cluster.yml
@@ -1,32 +1,46 @@
 ---
+- name: Install dependencies
+  apt:
+    name:
+        - python-pip
+        - python3-pip
+    state: latest
+    force: yes 
+    update_cache: yes
+
 - git:
     repo: 'https://github.com/kubernetes-sigs/kubespray.git'
     dest: /usr/src/kubespray
-    version: release-{{kube_spray_version}}
+    version: '{{ kube_spray_version }}'
 
 - name: Install requirements
   shell: |
     cd /usr/src/kubespray/
     pip install -r requirements.txt
+    pip3  install -r contrib/inventory_builder/requirements.txt
+    pip3 install ruamel.yaml
 
-# Copy ``inventory/sample`` as ``inventory/{{cluster-name}}``
+- debug:
+    msg: 
+    - "declare -a IPS=({{ ips }})"
+    - "CONFIG_FILE=inventory/{{cluster_name}}/hosts.yaml python3 contrib/inventory_builder/inventory.py ${IPS[@]}"
+
+# Copy ``inventory/sample`` as ``inventory/{{cluster_name}}``
 # Update Ansible inventory file with inventory builder
 - name: Create config file
   shell: |
-    cp -rfp inventory/sample inventory/{{cluster-name}}
-    declare -a IPS=({{ ips }})
-    CONFIG_FILE=inventory/{{cluster-name}}/hosts.yaml python3 contrib/inventory_builder/inventory.py ${IPS[@]}
+    #!/bin/bash 
+    cd /usr/src/kubespray/ 
+    cp -rfp inventory/sample inventory/{{cluster_name}} 
+    CONFIG_FILE=inventory/{{cluster_name}}/hosts.yaml python3 contrib/inventory_builder/inventory.py {{ ips }}
 
 - name: Set kube-version
   lineinfile:
-    path: /usr/src/kubespray/inventory/{{cluster-name}}/k8s-cluster.yml
+    path: /usr/src/kubespray/inventory/{{cluster_name}}/group_vars/k8s-cluster/k8s-cluster.yml
     regexp: '^kube_version:'
     line: 'kube_version: {{k8s_version}}'
 
-# Deploy Kubespray with Ansible Playbook - run the playbook as root
-# The option `--become` is required, as for example writing SSL keys in /etc/,
-# installing packages and interacting with various systemd daemons.
-# Without --become the playbook will fail to run!
-- name: Install k8s cluster
-  shell: |
-    ansible-playbook -i inventory/{{cluster-name}}/hosts.yaml  cluster.yml
+- debug:
+    msg: 
+    - "Now call the following command to install the cluster:"
+    - "cd /usr/src/kubespray/ && ansible-playbook -i inventory/{{cluster_name}}/hosts.yaml cluster.yml"
