--- a/k8s_create_inventory.yml
+++ b/k8s_create_inventory.yml
@@ -7,7 +7,7 @@
   become_flags: '-E -S -n'
   vars:
     cluster_name: 'mycluster'
-    ips: '192.168.100.23 192.168.100.26'
+    ips: '192.168.100.25 192.168.100.26'
   tasks:
     - name: Install dependencies
       apt:
@@ -44,8 +44,32 @@
         regexp: '^kube_version:'
         line: 'kube_version: {{k8s_version}}'
 
+    - name: Set helm-enabled
+      lineinfile:
+        path: /usr/src/kubespray/inventory/mycluster/group_vars/k8s-cluster/addons.yml
+        regexp: '^helm_enabled:'
+        line: 'helm_enabled: true'
+
+    - name: Set helm-version
+      lineinfile:
+        path: /usr/src/kubespray/inventory/mycluster/group_vars/k8s-cluster/addons.yml
+        regexp: '^helm_version:'
+        line: 'helm_version: {{helm_version}}'
+
+    - name: Set kubeconfig_localhost
+      lineinfile:
+        path: /usr/src/kubespray/inventory/{{cluster_name}}/group_vars/k8s-cluster/k8s-cluster.yml
+        regexp: '^kubeconfig_localhost:'
+        line: 'kubeconfig_localhost: true'
+
+    - name: Set kubectl_localhost
+      lineinfile:
+        path: /usr/src/kubespray/inventory/{{cluster_name}}/group_vars/k8s-cluster/k8s-cluster.yml
+        regexp: '^kubectl_localhost:'
+        line: 'kubectl_localhost: true'
+
     - debug:
         msg: 
         - "The following command installs the cluster:"
-        - "cd /usr/src/kubespray/ && ansible-playbook -u remote_machine_username -b -i inventory/{{cluster_name}}/hosts.yaml cluster.yml"
+        - "cd /usr/src/kubespray/ && ansible-playbook --flush-cache -u remote_machine_username -b -i inventory/{{cluster_name}}/hosts.yaml cluster.yml l --extra-vars 'ansible_ssh_private_key_file=/home/ubuntu/cloud.key'"
         - "Save inventory folder: /usr/src/kubespray/inventory/{{cluster_name}}"
