--- a/k8s_create_inventory.yml
+++ b/k8s_create_inventory.yml
@@ -10,6 +10,12 @@
     ips: '192.168.100.25 192.168.100.26'
     kubespray_dir: '~/tmp/kubespray'
   tasks:
+    - name: get local user
+      shell: "cat /etc/passwd | grep 1000 | cut -d: -f1"
+        args: 
+        executable: /bin/bash
+        register: user
+
     - name: Install dependencies
       apt:
         name:
@@ -23,6 +29,12 @@
         repo: 'https://github.com/kubernetes-sigs/kubespray.git'
         dest: "{{kubespray_dir}}"
         version: '{{ kube_spray_version }}'
+
+    - name: Change permissions of temporary Kubespray directory
+      file: 
+        path: "{{kubespray_dir}}"
+        owner: "{{ user.stdout }}"
+        group: "{{ user.stdout }}"
 
     - name: Install requirements
       shell: |
