--- a/k8s_create_inventory.yml
+++ b/k8s_create_inventory.yml
@@ -11,10 +11,9 @@
     kubespray_dir: '~/tmp/kubespray'
   tasks:
     - name: get local user
-      shell: "cat /etc/passwd | grep 1000 | cut -d: -f1"
-        args: 
-        executable: /bin/bash
-        register: user
+      shell: "cat /etc/passwd | grep 1000 | cut -d: -f1" 
+      args: 
+      register: user
 
     - name: Install dependencies
       apt:
@@ -24,6 +23,15 @@
         state: latest
         force: yes 
         update_cache: yes
+
+    - name: Check if kubespray is already cloned
+      stat:
+              path: "{{kubespray_dir}}"
+      register: kubespray_dir_info
+
+    - fail:
+            msg: "Kubespray already exists at {{kubespray_dir}}. Do you really want to create an inventory? Suggestion: run `make cluster` with your variables." 
+            when: kubespray_dir_info.stat.exists and kubespray_dir_info.stat.isdir     
 
     - git:
         repo: 'https://github.com/kubernetes-sigs/kubespray.git'
@@ -47,7 +55,7 @@
     - name: Create config file
       shell: |
         #!/bin/bash 
-        cd "{{kubespray_dir}}"/ 
+        cd "{{kubespray_dir}}"
         cp -rfp inventory/sample inventory/{{cluster_name}} 
         CONFIG_FILE=inventory/{{cluster_name}}/hosts.yaml python3 contrib/inventory_builder/inventory.py {{ ips }}
 
