--- a/k8s_create_inventory.yml
+++ b/k8s_create_inventory.yml
@@ -8,6 +8,7 @@
   vars:
     cluster_name: 'mycluster'
     ips: '192.168.100.25 192.168.100.26'
+    kube_oidc_client_id: 'dex-k8s-authenticator'
     kubespray_dir: '~/tmp/kubespray'
   tasks:
     - name: get local user
@@ -24,6 +25,8 @@
         force: yes 
         update_cache: yes
 
+    - include: roles/helm/tasks/main.yml
+    
     - name: Check if kubespray is already cloned
       stat:
               path: "{{kubespray_dir}}"
@@ -90,6 +93,30 @@
         path: "{{kubespray_dir}}/inventory/{{cluster_name}}/group_vars/k8s-cluster/k8s-cluster.yml"
         regexp: '^kubectl_localhost:'
         line: 'kubectl_localhost: true'
+
+    - name: Enable authentication
+      lineinfile:
+        path: /usr/src/kubespray/inventory/{{cluster_name}}/group_vars/k8s-cluster/k8s-cluster.yml
+        regexp: '^kube_oidc_auth:'
+        line: 'kube_oidc_auth: true'
+
+    - name: Set authentication url 
+      lineinfile:
+        path: /usr/src/kubespray/inventory/{{cluster_name}}/group_vars/k8s-cluster/k8s-cluster.yml
+        regexp: '^kube_oidc_url:'
+        line: 'kube_oidc_url: http://192.168.100.25:32000'
+
+    - name: Set client id
+      lineinfile:
+        path: /usr/src/kubespray/inventory/{{cluster_name}}/group_vars/k8s-cluster/k8s-cluster.yml
+        regexp: '^kube_oidc_client_id:'
+        line: 'kube_oidc_client_id: dex-k8s-authenticator'  
+
+    - name: Set client id
+      lineinfile:
+        path: /usr/src/kubespray/inventory/{{cluster_name}}/group_vars/k8s-cluster/k8s-cluster.yml
+        regexp: '^oidc_username_claim:'
+        line: 'oidc_username_claim: preferred_username'  
 
     - debug:
         msg: 
