--- a/k8s_deploy_components.yml
+++ b/k8s_deploy_components.yml
@@ -1,14 +1,20 @@
 ---
 
 - name: deploy_dex
+  hosts: localhost
+  become: true
+  become_method: sudo
+  become_flags: '-E -S -n'
   roles:
     - dex
 
 - name: Install traefik
+  hosts: localhost
+  become: true
+  become_method: sudo
+  become_flags: '-E -S -n'
   shell: |
     helm init
     helm repo add stable https://kubernetes-charts.storage.googleapis.com/
     helm install stable/traefik --name traefik0 --namespace kube-system --set externalIP={{ansible_default_ipv4.address}}
-  become: true
-  become_method: sudo
-  become_flags: '-E -S -n'
+  
