[ST-287] include helm and tiller in playbook

--- a/roles/k8s/tasks/setting_up_nodes.yml
+++ b/roles/k8s/tasks/setting_up_nodes.yml
@@ -21,6 +21,7 @@
       - kubelet-{{ k8s_version }}-0
       - kubectl-{{ k8s_version }}-0
       - docker
+      - git
      state: present
 
   - name: Starting and Enabling docker service
