--- a/roles/k8s/tasks/configure_master_node.yml
+++ b/roles/k8s/tasks/configure_master_node.yml
@@ -8,14 +8,61 @@
   - name: Resetting kubeadm
     shell: kubeadm reset -f
 
+  - name: Create kubeadm conf file
+    copy:
+     dest: /root/kubeadm.yml
+     content: |
+      ---
+      apiVersion: kubeadm.k8s.io/v1beta2
+      kind: ClusterConfiguration
+      kubernetesVersion: v{{ k8s_version }}
+      apiServer:
+        certSANs:
+        - {{ dns }}
+        extraArgs:
+          authorization-mode: Node,RBAC
+          oidc-issuer-url: {{ oidc_issuer_url }}
+          oidc-username-claim: {{ oidc_username_claim }}
+          oidc-client-id: {{ oidc_client_id }}
+        timeoutForControlPlane: 4m0s
+      certificatesDir: /etc/kubernetes/pki
+      clusterName: kubernetes
+      controllerManager: {}
+      dns:
+        type: CoreDNS
+      etcd:
+        local:
+          dataDir: /var/lib/etcd
+      imageRepository: k8s.gcr.io
+      networking:
+        dnsDomain: cluster.local
+        podSubnet: 10.244.0.0/16
+        serviceSubnet: 10.96.0.0/12
+      scheduler: {}
+
+      ---
+      apiVersion: kubeadm.k8s.io/v1beta2
+      kind: InitConfiguration
+      localAPIEndpoint:
+        advertiseAddress: {{ ansible_eth0.ipv4.address }}
+        bindPort: 6443
+    tags:
+      - packages
+
   - name: Initializing Kubernetes cluster
-    shell: kubeadm init --apiserver-advertise-address {{ ansible_eth0.ipv4.address }} --pod-network-cidr=10.244.0.0/16 --apiserver-cert-extra-sans {{ dns }}
+    shell: kubeadm init --config /root/kubeadm.yml
+
+  - name: Tidy up Kubeadm script
+    file:
+      path: '/root/kubeadm.yml'
+      state: absent
 
   - name: Copying required files
     shell: |
-     mkdir -p $HOME/.kube
-     sudo cp -f /etc/kubernetes/admin.conf $HOME/.kube/config
-     sudo chown $(id -u):$(id -g) $HOME/.kube/config
+      rm -rf $HOME/.kube
+      mkdir -p $HOME/.kube
+      sudo cp -f /etc/kubernetes/admin.conf $HOME/.kube/config
+      sudo chown $(id -u):$(id -g) $HOME/.kube/config
 
   - name: Install Network Add-on
     command: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
@@ -42,7 +89,7 @@
     args:
       executable: /bin/bash
 
-  - name: Tidy up Helm tmp
+  - name: Tidy up Helm script
     file:
       path: '/root/helm.sh'
       state: absent
