--- a/roles/ide/tasks/main.yml
+++ b/roles/ide/tasks/main.yml
@@ -57,6 +57,7 @@
   become: no
   command: xhost + 
   when: install_ide == 'yes'
+  ignore_errors: yes
 
 - name: Check if sshd_config exists
   stat: 
