--- a/roles/runner/tasks/main.yml
+++ b/roles/runner/tasks/main.yml
@@ -28,11 +28,11 @@
       --locked="false" \
       --access-level="not_protected"
 
-# - name: Config.toml
-#   template:
-#     src: config.toml
-#     dest: /etc/gitlab-runner/config.toml
-#   when: executor == 'docker'
+- name: Config.toml
+  template:
+    src: config.toml
+    dest: /etc/gitlab-runner/config.toml
+  when: executor == 'docker'
 
 - name: Check that the service has already been installed
   stat:
