--- a/roles/runner/tasks/main.yml
+++ b/roles/runner/tasks/main.yml
@@ -1,10 +1,16 @@
-## need to be merged with install.yml!
+
+- name: Check that the gitlab runner has already been installed
+  stat:
+    path: /usr/local/bin/gitlab-runner
+  register: stat_gitlab_runner
 
 - name: Install the latest version of GitLab Runner
   shell: curl -L --output /usr/local/bin/gitlab-runner https://gitlab-runner-downloads.s3.amazonaws.com/latest/binaries/gitlab-runner-linux-amd64
+  when: stat_gitlab_runner.stat.exists == False
 
 - name: Permissions to execute
   shell: chmod +x /usr/local/bin/gitlab-runner
+  when: stat_gitlab_runner.stat.exists == False
 
 - name: Check that the service has already been installed
   stat:
