--- a/openstack/templates/runner.yaml
+++ b/openstack/templates/runner.yaml
@@ -8,11 +8,11 @@ resources:
     content:
       ansible:
         file: '../../deploy_openstack_runner.yaml'
-        extra-vars: "token='seyd2HjhP4TkVveTe4Fx' runnername='EngageSKA-AUTO-TMC-Runner' taglist='docker-executor,engageska,ska,tmc-prototype' executor='docker'"
+        extra-vars: "token='oQ-F2kqMYxtc9gxdT5ya' runnername='New-Perentie-Runner' taglist='docker-executor,engageska,ska,tmc-prototype' executor='docker'"
     properties:
       image: 'Ubuntu 18.04 LTS Jan/2020'
       flavor: r1.medium
-      key_name: tester
+      key_name: adebeer-sac
       networks:
         - network: int_net
 
