--- a/openstack/templates/elastic.yaml
+++ b/openstack/templates/elastic.yaml
@@ -1,6 +1,6 @@
 heat_template_version: 2013-05-23
-heat_stack_name: test-runner
-description: TEST Runner
+heat_stack_name: test-elastic
+description: TEST Elasticsearch
 
 resources:
   ElasticsearchNode:
