--- a/roles/elasticsearch/tasks/docker.yml
+++ b/roles/elasticsearch/tasks/docker.yml
@@ -1,28 +1,36 @@
+#!/usr/bin/env ansible-playbook
 ---
 
-- name: Install required system packages
-  apt: name={{ item }} state=latest update_cache=yes
-  loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
+- name: "Apply the common role to docker nodes"
+  hosts:
+    - docker-nodes
+  become: yes
+  become_method: sudo
+  roles:
+    - common
 
-- name: Add Docker GPG apt Key
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
+- name: "Apply the containerd role to the docker nodes"
+  hosts:
+    - docker-nodes
+  become: yes
+  roles:
+    - role: containerd
+      when: activate_nvidia|bool or activate_containerd|bool
+  tags:
+    - containerd
 
-- name: Add Docker Repository
-  apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu bionic stable
-    state: present
+- name: "Show debug info"
+  hosts:
+    - docker-nodes
+  become: yes
+  tasks:
+    - name: "Show docker nodes info"
+      debug: var=hostvars[inventory_hostname]
+      when: debug
 
-- name: Update apt and install docker-ce
-  apt: update_cache=yes name=docker-ce state=latest
-
-- name: Install Docker Module for Python
-  pip:
-    name: docker
-
-- name: Starting and Enabling docker service
-  service:
-   name: docker
-   state: started
-   enabled: yes
+- name: "Apply the docker role to the docker nodes"
+  hosts:
+    - docker-nodes
+  become: yes
+  roles:
+    - docker
